--- a/docs/fhatos.adoc
+++ b/docs/fhatos.adoc
@@ -47,7 +47,73 @@ https://github.com/phaseshift-studio/fhatos[🐙 **source code**]
 == FhatOS Boot Loader
 
 ++++
-<!--  ./boot_runner.out -->
+<!-- 🐖 ./boot_runner.out -->
+++++
+
+[source,mmadt,subs="verbatim"]
+----
+            PhaseShift Studio Presents 
+ <`--'>____  ______ __  __  ______  ______  ______  ______ 
+ /. .  `'  \/\  ___/\ \_\ \/\  __ \/\__  _\/\  __ \/\  ___\ 
+(`')  ,     @ \  __\ \  __ \ \  __ \/_/\ \/\ \ \_\ \ \___  \ 
+ `-._,     / \ \_\  \ \_\ \_\ \_\ \_\ \ \_\ \ \_____\/\_____\ 
+    )-)_/-(>  \/_/   \/_/\/_/\/_/\/_/  \/_/  \/_____/\/_____/ 
+                                   A Dogturd Stynx Production 
+    fhatos-0.1-alpha > linux-6.8.0-52-generic > x86_64
+       [x86_64]
+      Use noobj for noobj
+      .oO loading system objs Oo.
+[INFO]  [/sys/scheduler] scheduler started
+[INFO]  [/sys/router] router started
+[INFO]  [/sys/router] main memory [total=>6784]
+[INFO]  [/sys/router] heap <none> spanning /sys/# attached
+[INFO]  [/sys/router] heap <none> spanning /mnt/# attached
+[INFO]  [/sys/router] heap /mnt/boot spanning /boot/# attached
+[INFO]  [/sys/router] ../../../conf/boot_config.obj boot config file loaded (size: 746 bytes)
+[WARN]  [/sys/router] router has no auto-prefix configuration: noobj
+[INFO]  [/sys/router] 
+  [
+    router=>[resolve=>[namespace=>[:=>/mmadt/,fos:=>/fos/],auto_prefix=>[,/mmadt/,/fos/,/fos/sys/,/fos/io/,/fos/sensor/,/fos/ui/,/fos/util/,/sys/],query=>[write=>[lock=>to_do]],default_config=>[query=>[write=>[sub=>noobj]]]]]
+    scheduler=>[def_stack_size=>8096]
+    mqtt=>[broker=>mqtt://chibi.local:1883,client=>fhatos_client,cache=>true]
+    wifi=>[ssid=>Rodkins-2G,password=>'puppymama',mdns=>fhatos]
+    ota=>[host=>mdns://fhatos_client:3232]
+    console=>[terminal=>[stdout=>/io/terminal/:stdout,stdin=>/io/terminal/:stdin],nest=>2,prompt=>'fhatos> ',strict=>false,log=>INFO,stack_size=>24288]
+    fs=>[root=>./data/fs]
+  ]@/boot/config
+[INFO]  [/sys/router] router boot config dropped
+[INFO]  [/sys/router] scheduler boot config dropped
+[INFO]  [/sys/router] /sys/lib/heap type imported
+[INFO]  [/sys/router] /sys/lib/mqtt type imported
+[INFO]  [/sys/router] /sys/lib/bus type imported
+[INFO]  [/sys/router] heap /mnt/fos spanning /fos/# attached
+      .oO loading mmadt lang Oo.
+[INFO]  [/sys/router] heap /mnt/mmadt spanning /mmadt/# attached
+      .oO loading fos models Oo.
+[INFO]  [/sys/router] heap /mnt/io spanning /io/# attached
+[INFO]  [/sys/router] /io/terminal obj loaded
+[INFO]  [/sys/router] /io/parser obj loaded
+[INFO]  [/io/log] switching from boot logger to system logger
+[INFO]  [/sys/router] /io/log obj loaded
+[INFO]  [/sys/router] log boot config dropped
+[INFO]  [/sys/router] heap /mnt/cache spanning +/# attached
+[INFO]  [/sys/type] /sys/structure/lib/fs/:create type defined
+[INFO]  [/sys/router] /io/lib/fs type imported
+[INFO]  [/mnt/disk] /home/killswitch/software/fhatos/build/docs/build/data/fs file system location mounted
+[INFO]  [/sys/router] fs /mnt/disk spanning /disk/# attached
+[INFO]  [/sys/router] fs boot config dropped
+[ERROR] [/mnt/mqtt] unable to connect to mqtt://chibi.local:1883: MQTT error [-1]: TCP/TLS connect failure
+[INFO]  [/sys/router] mqtt /mnt/mqtt spanning //io/# attached
+[INFO]  [/sys/router] mqtt boot config dropped
+[INFO]  [/mnt/bus] mapping /bus==>//io
+[INFO]  [/sys/router] bus /mnt/bus spanning /bus/# attached
+[INFO]  [/io/console] thread spawned: inst()[cpp]
+[INFO]  [/sys/router] /io/console obj loaded
+[INFO]  [/sys/router] console boot config dropped
+----
+
+++++
+<!-- 🐓 -->
 ++++
 
 === Booting on Linux/Unix/Mac
@@ -75,7 +141,6 @@ The FhatOS scheduler and router are accessible to the user when their respective
  b => [c => /
   [d => e]]]
 -->
-
 ++++
 
 [source,mmadt]
@@ -89,31 +154,17 @@ fhatos> [a => b,
 ===>c=>[d=>e]
 =>]
 =>]
-
 ----
 
-
-[source,mmadt]
-----
-fhatos> [a => b,
-         b => [c =>
-          [d => e]]]
-=>[
-==>a=>b
-==>b=>[
-===>c=>[d=>e]
-=>]
-=>]
-
-----
-
+++++
+<!-- 🐓 -->
+++++
 
 ++++
 <!-- 🐖 ./main_runner.out
 */sys/scheduler
 */sys/router
 -->
-
 ++++
 
 [source,mmadt]
@@ -149,52 +200,17 @@ fhatos> */sys/router
 ===>write=>[lock=>lock?obj{?}<=obj{?}()[cpp],sub=>sub?obj{?}<=obj()[cpp]]
 =>]
 =>]@/sys/router
-
 ----
 
-
-[source,mmadt]
-----
-fhatos> */sys/scheduler
-=>[
-==>barrier=>noobj
-==>process=>[
-=>]
-==>config=>[
-===>def_stack_size=>8096
-=>]
-=>]@/sys/scheduler
-fhatos> */sys/router
-=>[
-==>structure=>[
-===>/sys/#
-===>/mnt/#
-===>/boot/#
-===>/fos/#
-===>/mmadt/#
-===>/io/#
-===>+/#
-===>/disk/#
-===>//io/#
-===>/bus/#
-=>]
-==>frame=>[rec][_]
-==>config=>[
-===>resolve=>[namespace=>[:=>/mmadt/,fos:=>/fos/],auto_prefix=>[,/mmadt/,/fos/,/fos/sys/,/fos/io/,/fos/sensor/,/fos/ui/,/fos/util/,/sys/],query=>[write=>[lock=>to_do]],default_config=>[query=>[write=>[sub=>noobj]]]]
-=>]
-==>query=>[
-===>write=>[lock=>lock?obj{?}<=obj{?}()[cpp],sub=>sub?obj{?}<=obj()[cpp]]
-=>]
-=>]@/sys/router
-
-----
-
+++++
+<!-- 🐓 -->
+++++
 
 Likewise, the mmADT language is encoded within the fURI address space. mmADT's encoding is large as it includes all the mmADT types and instructions.
-By derefencing the `/mmadt` root with the wildcard extension `#`, a reflective representation of the mmADT language is accessed.
+By dereferencing the `/mmadt` root with the wildcard extension `#`, a reflective representation of the mmADT language is accessed.
 
 +++ <details><summary> +++
-fURI encoding of the mmADT language
+🔗 fURI encoding of the mmADT language
 +++ </summary><div> +++
 
 ++++
@@ -319,133 +335,11 @@ fhatos> */mmadt/#/
 ==>/mmadt/uri/::/mmadt/plus=>plus(from(0?rhs,noobj)[cpp])[cpp]
 ==>/mmadt/within=>within(from(0?code,noobj)[cpp])
 =>]
-
 ----
 
-
-[source,mmadt]
-----
-fhatos> */mmadt/#/
-=>[
-==>/mmadt/as=>as(from(0?type,noobj)[cpp])[cpp]
-==>/mmadt/at=>at?obj{?}<=obj{?}(from(0?var,noobj)[cpp])[cpp]
-==>/mmadt/barrier=>barrier?objs{*}<=objs{*}(from(0?barrier_op,_)[cpp])[cpp]
-==>/mmadt/bcode=>[bcode][_]
-==>/mmadt/bcode/::/mmadt/inspect=>inspect(from(0?inspected,_)[cpp])[cpp]
-==>/mmadt/block=>block?obj<=obj{?}(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/bool=>[bool][_]
-==>/mmadt/bool/::/mmadt/as=>as(from(0?type,noobj)[cpp])[cpp]
-==>/mmadt/bool/::/mmadt/inspect=>inspect(from(0?inspected,_)[cpp])[cpp]
-==>/mmadt/bool/::/mmadt/mult=>mult(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/bool/::/mmadt/neg=>neg(from(0?self,_)[cpp])[cpp]
-==>/mmadt/bool/::/mmadt/plus=>plus(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/bool/::/mmadt/sum=>sum?bool<=objs{*}()[cpp]
-==>/mmadt/count=>count?int<=objs{*}()[cpp]
-==>/mmadt/delay=>delay(from(0?millis,_)[cpp])[cpp]
-==>/mmadt/drop=>drop?obj{?}<=obj{?}(from(0?obj,_)[cpp])[cpp]
-==>/mmadt/each=>each(from(0?poly,noobj)[cpp])
-==>/mmadt/embed=>embed()[cpp]
-==>/mmadt/end=>end?noobj{.}<=obj{*}()[cpp]
-==>/mmadt/eq=>eq(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/error=>[error][_]
-==>/mmadt/explain=>explain()[cpp]
-==>/mmadt/frame=>frame?rec<=obj{?}()[cpp]
-==>/mmadt/from=>from?obj{?}<=obj{?}(from(0?uri,_)[cpp],from(1?default,noobj)[cpp])[cpp]
-==>/mmadt/goto=>goto(from(0?inst_id,noobj)[cpp])[cpp]
-==>/mmadt/gt=>gt(from(0?rhs,noobj)[cpp])
-==>/mmadt/gte=>gte(from(0?rhs,noobj)[cpp])
-==>/mmadt/inspect=>inspect(from(0?inspected,_)[cpp])
-==>/mmadt/inst=>[inst][_]
-==>/mmadt/inst/::/mmadt/inspect=>inspect(from(0?inspected,_)[cpp])[cpp]
-==>/mmadt/int=>[int][_]
-==>/mmadt/int/::/mmadt/as=>as(from(0?type,noobj)[cpp])[cpp]
-==>/mmadt/int/::/mmadt/gt=>gt(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/int/::/mmadt/gte=>gte(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/int/::/mmadt/inspect=>inspect(from(0?inspected,_)[cpp])[cpp]
-==>/mmadt/int/::/mmadt/lt=>lt(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/int/::/mmadt/lte=>lte(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/int/::/mmadt/mod=>mod(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/int/::/mmadt/mult=>mult(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/int/::/mmadt/neg=>neg(from(0?self,_)[cpp])[cpp]
-==>/mmadt/int/::/mmadt/plus=>plus(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/int/::/mmadt/sum=>sum?int<=objs{*}()[cpp]
-==>/mmadt/is=>is?obj{?}<=obj(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/lock=>lock(user=>_)[cpp]
-==>/mmadt/lshift=>lshift()
-==>/mmadt/lst=>[lst][_]
-==>/mmadt/lst/::/mmadt/each=>each(from(0?lst,_)[cpp])[cpp]
-==>/mmadt/lst/::/mmadt/inspect=>inspect(from(0?inspected,_)[cpp])[cpp]
-==>/mmadt/lst/::/mmadt/merge=>merge?objs{*}<=lst(from(0?count,2147483647)[cpp])[cpp]
-==>/mmadt/lst/::/mmadt/mult=>mult(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/lst/::/mmadt/plus=>plus(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/lst/::/mmadt/within=>within(from(0?code,noobj)[cpp])[cpp]
-==>/mmadt/lt=>lt(from(0?rhs,noobj)[cpp])
-==>/mmadt/lte=>lte(from(0?rhs,noobj)[cpp])
-==>/mmadt/map=>map?obj{?}<=obj{?}(from(0?mapping,noobj)[cpp])[cpp]
-==>/mmadt/merge=>merge?obj{?}<=obj(from(0?count,2147483647)[cpp])[cpp]
-==>/mmadt/mod=>mod(from(0?rhs,noobj)[cpp])
-==>/mmadt/mult=>mult(from(0?rhs,noobj)[cpp])
-==>/mmadt/neg=>neg(from(0?self,_)[cpp])
-==>/mmadt/neq=>neq(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/noobj=>[noobj][_]
-==>/mmadt/obj=>[obj][_]
-==>/mmadt/objs=>[objs][_]
-==>/mmadt/plus=>plus(from(0?rhs,noobj)[cpp])
-==>/mmadt/print=>print?obj{?}<=obj{?}(from(0?to_print,_)[cpp])[cpp]
-==>/mmadt/real=>[real][_]
-==>/mmadt/real/::/mmadt/as=>as(from(0?type,noobj)[cpp])[cpp]
-==>/mmadt/real/::/mmadt/gt=>gt(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/real/::/mmadt/gte=>gte(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/real/::/mmadt/inspect=>inspect(from(0?inspected,_)[cpp])[cpp]
-==>/mmadt/real/::/mmadt/lt=>lt(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/real/::/mmadt/lte=>lte(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/real/::/mmadt/mult=>mult(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/real/::/mmadt/neg=>neg(from(0?self,_)[cpp])[cpp]
-==>/mmadt/real/::/mmadt/plus=>plus(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/rec=>[rec][_]
-==>/mmadt/rec/::/mmadt/inspect=>inspect(from(0?inspected,_)[cpp])[cpp]
-==>/mmadt/rec/::/mmadt/lshift=>lshift(level=>1)[cpp]
-==>/mmadt/rec/::/mmadt/merge=>merge?objs{*}<=rec(from(0?count,2147483647)[cpp])[cpp]
-==>/mmadt/rec/::/mmadt/mult=>mult(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/rec/::/mmadt/plus=>plus(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/rec/::/mmadt/rshift=>rshift(from(0?prefix,noobj)[cpp])[cpp]
-==>/mmadt/rec/::/mmadt/within=>within(from(0?code,noobj)[cpp])[cpp]
-==>/mmadt/ref=>ref?obj{?}<=obj{?}(from(0?id,noobj)[cpp],from(1?retain,true)[cpp])[cpp]
-==>/mmadt/repeat=>repeat(from(0?code,noobj)[cpp],from(1?until,true)[cpp],from(2?emit,false)[cpp])[cpp]
-==>/mmadt/rshift=>rshift()
-==>/mmadt/split=>split(from(0?poly,noobj)[cpp])[cpp]
-==>/mmadt/start=>start?objs{*}<=noobj{.}(from(0?starts,noobj)[cpp])[cpp]
-==>/mmadt/str=>[str][_]
-==>/mmadt/str/::/mmadt/as=>as(from(0?type,noobj)[cpp])[cpp]
-==>/mmadt/str/::/mmadt/gt=>gt(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/str/::/mmadt/gte=>gte(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/str/::/mmadt/inspect=>inspect(from(0?inspected,_)[cpp])[cpp]
-==>/mmadt/str/::/mmadt/lt=>lt(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/str/::/mmadt/lte=>lte(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/str/::/mmadt/merge=>merge?objs{*}<=str(from(0?count,2147483647)[cpp])[cpp]
-==>/mmadt/str/::/mmadt/mult=>mult(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/str/::/mmadt/plus=>plus(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/str/::/mmadt/sum=>sum?str<=objs{*}()[cpp]
-==>/mmadt/str/::/mmadt/within=>within(from(0?code,noobj)[cpp])[cpp]
-==>/mmadt/sum=>sum?obj<=objs{*}()
-==>/mmadt/to=>to(from(0?uri,noobj)[cpp],from(1?retain,true)[cpp])[cpp]
-==>/mmadt/type=>type?uri<=obj{?}(from(0?obj,_)[cpp])[cpp]
-==>/mmadt/uri=>[uri][_]
-==>/mmadt/uri/::/mmadt/as=>as(from(0?type,noobj)[cpp])[cpp]
-==>/mmadt/uri/::/mmadt/gt=>gt(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/uri/::/mmadt/gte=>gte(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/uri/::/mmadt/inspect=>inspect(from(0?inspected,_)[cpp])[cpp]
-==>/mmadt/uri/::/mmadt/lshift=>lshift(level=>1)[cpp]
-==>/mmadt/uri/::/mmadt/lt=>lt(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/uri/::/mmadt/lte=>lte(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/uri/::/mmadt/merge=>merge?objs{*}<=uri(from(0?count,2147483647)[cpp])[cpp]
-==>/mmadt/uri/::/mmadt/mult=>mult(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/uri/::/mmadt/plus=>plus(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/within=>within(from(0?code,noobj)[cpp])
-=>]
-
-----
-
+++++
+<!-- 🐓 -->
+++++
 
 +++ </div></details> +++
 
@@ -467,7 +361,6 @@ The following subsections will provide a short overview of the aforementioned re
 <!-- 🐖 ./main_runner.out
 */io/console
 -->
-
 ++++
 
 [source,mmadt]
@@ -486,28 +379,11 @@ fhatos> */io/console
 ===>stack_size=>24288
 =>]
 =>]@/io/console
-
 ----
 
-
-[source,mmadt]
-----
-fhatos> */io/console
-=>console[
-==>halt=>false
-==>delay=>nat[0]
-==>loop=>inst()[cpp]
-==>config=>[
-===>terminal=>[stdout=>/io/terminal/:stdout,stdin=>/io/terminal/:stdin]
-===>nest=>2
-===>prompt=>'fhatos> '
-===>strict=>false
-===>log=>INFO
-===>stack_size=>24288
-=>]
-=>]@/io/console
-
-----
+++++
+<!-- 🐓 -->
+++++
 
 
 === The mm-ADT Language
@@ -542,7 +418,6 @@ TIP: The size of `int` and `real` in bits can be specified in the boot loader.
 int[6].inspect()
 real[6.0].inspect()
 -->
-
 ++++
 
 [source,mmadt]
@@ -573,40 +448,11 @@ fhatos> real[6.0].inspect()
 ===>encoding=>float_t
 =>]
 =>]
-
 ----
 
-
-[source,mmadt]
-----
-fhatos> int[6].inspect()
-=>[
-==>type=>[
-===>id=>/mmadt/int
-===>obj=>[int][_]
-===>dom=>[id=>/mmadt/obj,coeff=>[1,1]]
-===>rng=>[id=>/mmadt/int,coeff=>[1,1]]
-=>]
-==>value=>[
-===>obj=>6
-===>encoding=>int32_t
-=>]
-=>]
-fhatos> real[6.0].inspect()
-=>[
-==>type=>[
-===>id=>/mmadt/real
-===>obj=>[real][_]
-===>dom=>[id=>/mmadt/obj,coeff=>[1,1]]
-===>rng=>[id=>/mmadt/real,coeff=>[1,1]]
-=>]
-==>value=>[
-===>obj=>6.000000
-===>encoding=>float_t
-=>]
-=>]
-
-----
+++++
+<!-- 🐓 -->
+++++
 
 
 . The `inst` `*` dereferences the `/fos/nat` fURI which points to the respective type definition.
@@ -631,21 +477,11 @@ fhatos> int[6]
 ==>6
 fhatos> 6
 ==>6
-
 ----
 
-
-[source,mmadt]
-----
-fhatos> /mmadt/int[6]
-==>6
-fhatos> int[6]
-==>6
-fhatos> 6
-==>6
-
-----
-
+++++
+<!-- 🐓 -->
+++++
 
 Examples of the aforementioned types are provided below.
 
@@ -666,26 +502,11 @@ fhatos> mmadt://a/furi
 ==>mmadt://a/furi
 fhatos> [-1,'fhat',[0,1]]
 fhatos> [a=>1,b=>'2',c=>3.0]
-
 ----
 
-
-[source,mmadt]
-----
-fhatos> true
-==>true
-fhatos> 42
-==>42
-fhatos> -64.02567
-==>-64.0257
-fhatos> 'the fhatty'
-fhatos> mmadt://a/furi
-==>mmadt://a/furi
-fhatos> [-1,'fhat',[0,1]]
-fhatos> [a=>1,b=>'2',c=>3.0]
-
-----
-
+++++
+<!-- 🐓 -->
+++++
 
 ==== Values
 
@@ -734,37 +555,11 @@ fhatos> @x.inspect()
 	--->[           ] /mmadt/mult => mult(from(0?rhs,noobj)[cpp])
 	---->[/mmadt/mult] /mmadt/mult => mult(from(0?rhs,noobj)[cpp])
 [ERROR] [/sys/router/frame] -> [code=>'@x.inspect()']
-
 ----
 
-
-[source,mmadt]
-----
-fhatos> /type/int/age -> \|(is(gt(0)).is(lt(120)))
-[ERROR] [/sys/router] no attached structure for /type/int/age  
-==>is?obj<=obj(gt?obj<=obj(0)[noobj])[noobj].is?obj<=obj(lt?obj<=obj(120)[noobj])[noobj]
-fhatos> x -> age[45]
-[ERROR] [/sys/type] age is an undefined type
-[ERROR] [/sys/router/frame] -> [code=>'x -> age[45]']
-fhatos> *x.inspect()
-[ERROR] [/mmadt/obj] /mmadt/mult inst unresolved 
-	         lhs id       inst id        resolve obj                                                                 
-	  ->[/mmadt/obj ] /mmadt/mult => noobj                                                                   
-	 -->[/mmadt/obj ] /mmadt/mult => noobj                                                                   
-	--->[           ] /mmadt/mult => mult(from(0?rhs,noobj)[cpp])
-	---->[/mmadt/mult] /mmadt/mult => mult(from(0?rhs,noobj)[cpp])
-[ERROR] [/sys/router/frame] -> [code=>'*x.inspect()']
-fhatos> @x.inspect()
-[ERROR] [/mmadt/obj] /mmadt/mult inst unresolved 
-	         lhs id       inst id        resolve obj                                                                 
-	  ->[/mmadt/obj ] /mmadt/mult => noobj                                                                   
-	 -->[/mmadt/obj ] /mmadt/mult => noobj                                                                   
-	--->[           ] /mmadt/mult => mult(from(0?rhs,noobj)[cpp])
-	---->[/mmadt/mult] /mmadt/mult => mult(from(0?rhs,noobj)[cpp])
-[ERROR] [/sys/router/frame] -> [code=>'@x.inspect()']
-
-----
-
+++++
+<!-- 🐓 -->
+++++
 
 |===
 
@@ -814,55 +609,11 @@ fhatos> @x.plus(1).plus(1)
 	--->[           ] /mmadt/mult => mult(from(0?rhs,noobj)[cpp])
 	---->[/mmadt/mult] /mmadt/mult => mult(from(0?rhs,noobj)[cpp])
 [ERROR] [/sys/router/frame] -> [code=>'@x.plus(1).plus(1)']
-
 ----
 
-
-[source,mmadt]
-----
-fhatos> x?sub -> |print(_)
-[ERROR] [/mmadt/obj] /mmadt/mult inst unresolved 
-	         lhs id       inst id        resolve obj                                                                 
-	  ->[/mmadt/obj ] /mmadt/mult => noobj                                                                   
-	 -->[/mmadt/obj ] /mmadt/mult => noobj                                                                   
-	--->[           ] /mmadt/mult => mult(from(0?rhs,noobj)[cpp])
-	---->[/mmadt/mult] /mmadt/mult => mult(from(0?rhs,noobj)[cpp])
-[ERROR] [/sys/router/frame] -> [code=>'x?sub -> |print(_)']
-fhatos> x -> 12
-[ERROR] [/mmadt/obj] /mmadt/mult inst unresolved 
-	         lhs id       inst id        resolve obj                                                                 
-	  ->[/mmadt/obj ] /mmadt/mult => noobj                                                                   
-	 -->[/mmadt/obj ] /mmadt/mult => noobj                                                                   
-	--->[           ] /mmadt/mult => mult(from(0?rhs,noobj)[cpp])
-	---->[/mmadt/mult] /mmadt/mult => mult(from(0?rhs,noobj)[cpp])
-[ERROR] [/sys/router/frame] -> [code=>'x -> 12']
-fhatos> @x.inspect()
-[ERROR] [/mmadt/obj] /mmadt/mult inst unresolved 
-	         lhs id       inst id        resolve obj                                                                 
-	  ->[/mmadt/obj ] /mmadt/mult => noobj                                                                   
-	 -->[/mmadt/obj ] /mmadt/mult => noobj                                                                   
-	--->[           ] /mmadt/mult => mult(from(0?rhs,noobj)[cpp])
-	---->[/mmadt/mult] /mmadt/mult => mult(from(0?rhs,noobj)[cpp])
-[ERROR] [/sys/router/frame] -> [code=>'@x.inspect()']
-fhatos> @x.plus(1)
-[ERROR] [/mmadt/obj] /mmadt/mult inst unresolved 
-	         lhs id       inst id        resolve obj                                                                 
-	  ->[/mmadt/obj ] /mmadt/mult => noobj                                                                   
-	 -->[/mmadt/obj ] /mmadt/mult => noobj                                                                   
-	--->[           ] /mmadt/mult => mult(from(0?rhs,noobj)[cpp])
-	---->[/mmadt/mult] /mmadt/mult => mult(from(0?rhs,noobj)[cpp])
-[ERROR] [/sys/router/frame] -> [code=>'@x.plus(1)']
-fhatos> @x.plus(1).plus(1)
-[ERROR] [/mmadt/obj] /mmadt/mult inst unresolved 
-	         lhs id       inst id        resolve obj                                                                 
-	  ->[/mmadt/obj ] /mmadt/mult => noobj                                                                   
-	 -->[/mmadt/obj ] /mmadt/mult => noobj                                                                   
-	--->[           ] /mmadt/mult => mult(from(0?rhs,noobj)[cpp])
-	---->[/mmadt/mult] /mmadt/mult => mult(from(0?rhs,noobj)[cpp])
-[ERROR] [/sys/router/frame] -> [code=>'@x.plus(1).plus(1)']
-
-----
-
+++++
+<!-- 🐓 -->
+++++
 
 ==== Expression Structure
 
@@ -899,29 +650,11 @@ fhatos> nat[3].mult(-2)
 [ERROR] [/sys/type] -6 is not a /fos/nat as defined by nat()[is(inst()[gte(0)])]
 		thrown at inst  nat[3] => mult(-2)[cpp]
 [ERROR] [/sys/router/frame] -> [code=>'nat[3].mult(-2)']
-
 ----
 
-
-[source,mmadt]
-----
-fhatos> /type/int/nat -> |is(gt(0))
-[ERROR] [/sys/router] no attached structure for /type/int/nat  
-==>is?obj<=obj(gt?obj<=obj(0)[noobj])[noobj]
-fhatos> nat[6]
-==>nat[6]
-fhatos> nat[-6]
-[ERROR] [/sys/type] -6 is not a /fos/nat as defined by nat()[is(inst()[gte(0)])]
-[ERROR] [/sys/router/frame] -> [code=>'nat[-6]']
-fhatos> nat[3].plus(2)
-==>nat[5]
-fhatos> nat[3].mult(-2)
-[ERROR] [/sys/type] -6 is not a /fos/nat as defined by nat()[is(inst()[gte(0)])]
-		thrown at inst  nat[3] => mult(-2)[cpp]
-[ERROR] [/sys/router/frame] -> [code=>'nat[3].mult(-2)']
-
-----
-
+++++
+<!-- 🐓 -->
+++++
 
 ===== Process Types
 
@@ -964,7 +697,6 @@ a -> b
 *a
 **a
 -->
-
 ++++
 
 [source,mmadt]
@@ -979,24 +711,11 @@ fhatos> *a
 ==>b
 fhatos> **a
 ==>12
-
 ----
 
-
-[source,mmadt]
-----
-fhatos> *a
-fhatos> *b
-fhatos> b -> 12
-==>12
-fhatos> a -> b
-==>b
-fhatos> *a
-==>b
-fhatos> **a
-==>12
-
-----
+++++
+<!-- 🐓 -->
+++++
 
 a|
 [source,mmadt]
@@ -1020,7 +739,6 @@ a -> 12
 @a.plus(10)
 *a
 -->
-
 ++++
 
 [source,mmadt]
@@ -1037,26 +755,11 @@ fhatos> @a.plus(10)
 ==>22@a
 fhatos> *a
 ==>22@a
-
 ----
 
-
-[source,mmadt]
-----
-fhatos> a -> 12
-==>12
-fhatos> *a.plus(10)
-==>22
-fhatos> *a
-==>12
-fhatos> @a
-==>12@a
-fhatos> @a.plus(10)
-==>22@a
-fhatos> *a
-==>22@a
-
-----
+++++
+<!-- 🐓 -->
+++++
 
 a|
 [source,mmadt]
@@ -1088,8 +791,11 @@ fhatos> *a
 ==>12
 fhatos> *b
 ==>12
-
 ----
+
+++++
+<!-- 🐓 -->
+++++
 
 
 [source,mmadt]
@@ -1125,8 +831,7 @@ subscribes to `a` with bcode of the form \$f(a) -> b\$. `12` is written to `a` w
 ==== Embedding
 
 mm-ADT was designed to support the creation and manipulation of _abstract data types_ -- the "ADT" in mm-ADT.
-When expressing abstract data types is natural, then it's possible to leverage _multiple models_ such as key/value,
-document, relational, vector, graph, and the various nooks and crannies between -- the "mm" in mm-ADT.
+When expressing abstract data types is natural, then it's possible to leverage _multiple models_ such as key/value, document, relational, vector, graph, and the various nooks and crannies between -- the "mm" in mm-ADT.
 
 mm-ADT's URI addressing scheme makes it possible to _embed_ an array data types into the underlying fHaTOs structure.
 This section will explore the following considerations when designing a _multi-model abstract data type_.
@@ -1141,29 +846,22 @@ This section will explore the following considerations when designing a _multi-m
 <!-- 🐖 ./main_runner.out
 1.plus(2)
 -->
-
 ++++
 
 [source,mmadt]
 ----
 fhatos> 1.plus(2)
 ==>3
-
 ----
 
-
-[source,mmadt]
-----
-fhatos> 1.plus(2)
-==>3
-
-----
-
+++++
+<!-- 🐓 -->
+++++
 
 A _matrix_ is an \$n \times m\$ data structure composed of \$n\$ vectors/row, each with \$m\$ elements/columns.
-A relational database _table_ is an example of a matrix, where the entries typically span numeric and non-numeric data
-types. There are two general approaches to embedding a matrix or table into an `fstruct`. Each at opposite ends of the
-space/time-tradeoff landscape.
+A relational database _table_ is an example of a matrix, where the entries typically span numeric and non-numeric data types.
+There are two general approaches to embedding a matrix or table into an `fstruct`.
+Each at opposite ends of the space/time-tradeoff landscape.
 
 [cols="5,5,5"]
 |===
@@ -1183,7 +881,9 @@ a|
 ----
 m/0-[■]-[■]-[■]-[■]
 
+
 m/1-[■]-[■]-[■]-[■]
+
 
 m/2-[■]-[■]-[■]-[■]
 ----
@@ -1191,11 +891,15 @@ m/2-[■]-[■]-[■]-[■]
 a|
 [source,mmadt]
 ----
-  0-[■]-[■]-[■]-[■]
+   0-[■]-[■]-[■]-[■]
+  /
  /
-m-1-[■]-[■]-[■]-[■]
+m--1-[■]-[■]-[■]-[■]
  \
-  2-[■]-[■]-[■]-[■]
+  \
+   2-[■]-[■]-[■]-[■]
+
+
 ----
 a|
 ++++
@@ -1213,7 +917,6 @@ m/2/1 -> 9
 m/2/2 -> 10
 m/2/3 -> 11
 -->
-
 ++++
 
 [source,mmadt]
@@ -1242,79 +945,50 @@ fhatos> m/2/2 -> 10
 ==>10
 fhatos> m/2/3 -> 11
 ==>11
-
 ----
 
-
-[source,mmadt]
-----
-fhatos> m/0/0 -> 0
-==>0
-fhatos> m/0/1 -> 1
-==>1
-fhatos> m/0/2 -> 2
-==>2
-fhatos> m/0/3 -> 3
-==>3
-fhatos> m/1/0 -> 4
-==>4
-fhatos> m/1/1 -> 5
-==>5
-fhatos> m/1/2 -> 6
-==>6
-fhatos> m/1/3 -> 7
-==>7
-fhatos> m/2/0 -> 8
-==>8
-fhatos> m/2/1 -> 9
-==>9
-fhatos> m/2/2 -> 10
-==>10
-fhatos> m/2/3 -> 11
-==>11
-
-----
+++++
+<!-- 🐓 -->
+++++
 
 
 a|
 ++++
 <!-- 🐖 ./main_runner.out
-m/0 -> [0,1,2,3], /
-m/1 -> [4,5,6,7], /
-m/2 -> [8,9,10,11]]
+m/0 -> [0,1,2,3]
+m/1 -> [4,5,6,7]
+m/2 -> [8,9,10,11]
 -->
-
 ++++
 
 [source,mmadt]
 ----
-fhatos> m/0 -> [0,1,2,3],
-        m/1 -> [4,5,6,7],
-        m/2 -> [8,9,10,11]]
+fhatos> m/0 -> [0,1,2,3]
 =>[
 ===>0
 ===>1
 ===>2
 ===>3
 =>]
-
+fhatos> m/1 -> [4,5,6,7]
+=>[
+===>4
+===>5
+===>6
+===>7
+=>]
+fhatos> m/2 -> [8,9,10,11]
+=>[
+===>8
+===>9
+===>10
+===>11
+=>]
 ----
 
-
-[source,mmadt]
-----
-fhatos> m/0 -> [0,1,2,3],
-        m/1 -> [4,5,6,7],
-        m/2 -> [8,9,10,11]]
->[
-==>0
-==>1
-==>2
-==>3
->]
-
-----
-
+++++
+<!-- 🐓 -->
+++++
 
 a|
 ++++
@@ -1323,7 +997,6 @@ m -> [<0>=>[0,1,2,3], /
       <1>=>[4,5,6,7], /
       <2>=>[8,9,10,11]]
 -->
-
 ++++
 
 [source,mmadt]
@@ -1351,40 +1024,13 @@ fhatos> m -> [<0>=>[0,1,2,3],
 ===>11
 =>]
 =>]
-
 ----
 
-
-[source,mmadt]
-----
-fhatos> m -> [<0>=>[0,1,2,3],
-              <1>=>[4,5,6,7],
-              <2>=>[8,9,10,11]]
-=>[
-==>0=>[
-===>0
-===>1
-===>2
-===>3
-=>]
-==>1=>[
-===>4
-===>5
-===>6
-===>7
-=>]
-==>2=>[
-===>8
-===>9
-===>10
-===>11
-=>]
-=>]
-
-----
+++++
+<!-- 🐓 -->
+++++
 
 |===
-
 
 [source,mmadt]
 ----
@@ -1451,7 +1097,6 @@ M = aM
 {1,2,3}.plus(_)
 {1,2,3}.plus(plus(_))
 -->
-
 ++++
 
 [source,mmadt]
@@ -1472,31 +1117,11 @@ fhatos> {1,2,3}.plus(plus(_))
 ==>3
 ==>6
 ==>9
-
 ----
 
-
-[source,mmadt]
-----
-fhatos> {1,2,3}
-==>1
-==>2
-==>3
-fhatos> {1,2,3}.plus(10)
-==>11
-==>12
-==>13
-fhatos> {1,2,3}.plus(_)
-==>2
-==>4
-==>6
-fhatos> {1,2,3}.plus(plus(_))
-==>3
-==>6
-==>9
-
-----
-
+++++
+<!-- 🐓 -->
+++++
 
 == FhatOS Modules
 
@@ -1551,21 +1176,11 @@ fhatos> true.plus(false)
 fhatos> 1.plus(2)
 ==>3
 fhatos> 'a'.plus('b')
-
 ----
 
-
-[source,mmadt]
-----
-fhatos> true.plus(false)
-==>true
-fhatos> 1.plus(2)
-==>3
-fhatos> 'a'.plus('b')
-
-----
-
-
+++++
+<!-- 🐓 -->
+++++
 
 ==== mult
 
@@ -1613,29 +1228,11 @@ fhatos> [a=>2].match([a=>_])
 	 -->[/mmadt/rec] match => noobj
 	--->[          ] match => noobj
 [ERROR] [/sys/router/frame] -> [code=>'[a=>2].match([a=>_])']
-
 ----
 
-
-[source,mmadt]
-----
-fhatos> [a=>2].match([a=>3])
-[ERROR] [/mmadt/rec] match inst unresolved 
-	         lhs id      inst id    resolve obj
-	  ->[/mmadt/rec] match => noobj
-	 -->[/mmadt/rec] match => noobj
-	--->[          ] match => noobj
-[ERROR] [/sys/router/frame] -> [code=>'[a=>2].match([a=>3])']
-fhatos> [a=>2].match([a=>_])
-[ERROR] [/mmadt/rec] match inst unresolved 
-	         lhs id      inst id    resolve obj
-	  ->[/mmadt/rec] match => noobj
-	 -->[/mmadt/rec] match => noobj
-	--->[          ] match => noobj
-[ERROR] [/sys/router/frame] -> [code=>'[a=>2].match([a=>_])']
-
-----
-
+++++
+<!-- 🐓 -->
+++++
 
 ==== eq
 
